LOOKS: Fix widths of alignment table

--- a/src/less/modules/unit-outcome-alignment.less
+++ b/src/less/modules/unit-outcome-alignment.less
@@ -16,10 +16,10 @@
 }
 
 table.table-task-alignment {
-  td.task-abbreviation    { width: 5%;  max-width: 5ex;  }
-  td.task-status-icon     { width: 7%;  max-width: 5ex;  }
-  td.task-name            { width: 10%; max-width: 10ex; }
-  td.include-in-portfolio { width: 10%; max-width: 10ex; }
+  td.task-abbreviation    { width: 5ex;  }
+  td.task-status-icon     { width: 6em;  }
+  td.task-name            { width: 10ex; }
+  td.include-in-portfolio { width: 10ex; }
   td.task-abbreviation label {
     display: inline-block;
     width: 100%;
@@ -32,7 +32,7 @@ table.table-task-alignment {
   }
   td.ilo-alignment {
     .alignment-circle {
-      width: 20%;
+      width: 6em;
       padding: 0.25em;
       margin: 0 auto;
       border: 1px solid transparent;
